[gd_scene load_steps=11 format=3 uid="uid://dwmyf3c3kjdih"]

[ext_resource type="Script" uid="uid://bbexpquh4b3ip" path="res://scripts/UI.gd" id="4_uimanager"]
[ext_resource type="PackedScene" uid="uid://dfql5k5psmgxn" path="res://scenes/TowerSpot.tscn" id="5_towerspot"]
[ext_resource type="PackedScene" uid="uid://cjhp6v8qnx4qm" path="res://scenes/Tower.tscn" id="6_tower"]
[ext_resource type="PackedScene" uid="uid://dr5mh3wmxd7uu" path="res://scenes/Base.tscn" id="8_base"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
tonemap_mode = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_ground"]
size = Vector2(50, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.4, 0.6, 0.4, 1)

[sub_resource type="Curve3D" id="Curve3D_path"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -20, 0, 0, 0, 0, 0, 0, 0, 0, -20, 0, 10, 0, 0, 0, 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 0, 0, 20, 0, 10, 0, 0, 0, 0, 0, 0, 20, 0, 0),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)
current = true
fov = 60.0

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_ground")

[node name="EnemyPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_path")

[node name="Base" parent="." instance=ExtResource("8_base")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)

[node name="TowerSpot1" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 5)
tower_scene = ExtResource("6_tower")

[node name="TowerSpot2" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)
tower_scene = ExtResource("6_tower")

[node name="TowerSpot3" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5)
tower_scene = ExtResource("6_tower")

[node name="TowerSpot4" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 5)
tower_scene = ExtResource("6_tower")

[node name="TowerSpot5" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -5)
tower_scene = ExtResource("6_tower")

[node name="TowerSpot6" parent="." instance=ExtResource("5_towerspot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -5)
tower_scene = ExtResource("6_tower")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_uimanager")

[node name="Panel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Base HP: 20"

[node name="CurrencyLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Currency: 100"

[node name="WaveLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Wave: 0"

[node name="GameOverLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1
